@@ -43,3 +43,4 @@ List::MoreUtils = 0.22
 
 [Prereqs / TestRequires]
 Test::More = 0.88
+Test::Warn = 0.20
